Closed Bug 1312865 Opened 8 years ago Closed 7 years ago

WebGL 2 clearBufferfi does not work for clearing the contents of a depth-stencil texture in an FBO.

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- fixed
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: jujjyl, Assigned: jgilbert)

References

Details

(Whiteboard: [gfx-noted])

Attachments

(2 files)

STR:

1. Visit http://clb.demon.fi/bugs/offscreen_fbo/fbo_test.htm
2. Visit http://clb.demon.fi/bugs/offscreen_fbo/fbo_test.htm?fbo

Expected:

The first URL renders a cube without FBOs. The second one is the same, but rendering is done to an offscreen depth-stencil-color FBO combination, which is finally blitted to screen. The two test cases should produce identical output.

Observed:

The second fbo-utilizing path does not produce correct output.
Thanks for writing this test case. This affects 49 all the way up to 52 afaik.
Whiteboard: [gfx-noted]
Priority: -- → P2
Dzmitry, can you take a look at this bug over the next few days?
Flags: needinfo?(kvark)
On it
Assignee: nobody → kvark
Status: NEW → ASSIGNED
Flags: needinfo?(kvark)
Attachment #8820535 - Flags: review?(jgilbert)
Comment on attachment 8820535 [details] [diff] [review]
webgl-notify.patch

Review of attachment 8820535 [details] [diff] [review]:
-----------------------------------------------------------------

Great catch. The full fix is a little trickier, since we have some state yet we need to juggle. (a la WebGLContext::Clear)

Given the time sensitivity here, I'm going to take this starting from this patch.
Attachment #8820535 - Flags: review?(jgilbert) → review-
Priority: P2 → P1
Assignee: kvark → jgilbert
Comment on attachment 8820586 [details]
Bug 1312865 - ClearBuffer and similar funcs should mirror Clear's behavior. -

https://reviewboard.mozilla.org/r/100082/#review100560

LGTM
Attachment #8820586 - Flags: review?(dmu) → review+
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/180e256b5793
ClearBuffer and similar funcs should mirror Clear's behavior. - r=daoshengmu
Blocks: 1325733
https://hg.mozilla.org/mozilla-central/rev/180e256b5793
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: