Bug 1312865 - ClearBuffer and similar funcs should mirror Clear's behavior. - r=daoshengmu

MozReview-Commit-ID: 4Gm5aNZ1PXX